fix journal entries scrollbar

--- a/src/styles/components/_journal.scss
+++ b/src/styles/components/_journal.scss
@@ -40,7 +40,8 @@
 .journal__entries {
     flex: 1 1 auto;
     margin-top: 30px;
-    overflow-y: scroll;
+    overflow-y: auto;
+
     &::-webkit-scrollbar {
         width: 8px;
     }
